@@ -15,7 +15,7 @@
     <description>a util for network traffic transport</description>
 
     <properties>
-        <java.version>13</java.version>
+        <java.version>11</java.version>
         <version>1.0.0-SNAPSHOT</version>
     </properties>
 
@@ -36,10 +36,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>13</release>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
+                    <release>11</release>
                 </configuration>
             </plugin>
         </plugins>
